// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Choice applies errorMessage to label 1`] = `
<DocumentFragment>
  <ds-choice
    error-message="Hey! You can't do that!"
    id="static-id"
    label="George Washington"
    name="foo"
    type="checkbox"
    value="boo"
  >
    <div>
      <div
        class="ds-c-choice-wrapper"
      >
        <input
          aria-describedby="choice--11__error"
          class="ds-c-choice"
          id="choice--11"
          name="foo"
          type="checkbox"
          value="boo"
        />
        <label
          class="ds-c-label"
          for="choice--11"
          id="choice--11__label"
        >
          George Washington
        </label>
        <p
          aria-atomic="true"
          aria-live="assertive"
          class="ds-c-inline-error"
          id="choice--11__error"
        >
          <svg
            aria-hidden="true"
            class="ds-c-icon ds-c-icon--alert-circle "
            viewBox="36 -12 186 186"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M162.18 41.592c-5.595-9.586-13.185-17.176-22.771-22.771-9.588-5.595-20.055-8.392-31.408-8.392-11.352 0-21.821 2.797-31.408 8.392-9.587 5.594-17.177 13.184-22.772 22.771-5.596 9.587-8.393 20.057-8.393 31.408 0 11.351 2.798 21.82 8.392 31.408 5.595 9.584 13.185 17.176 22.772 22.771 9.587 5.595 20.056 8.392 31.408 8.392s21.822-2.797 31.408-8.392c9.586-5.594 17.176-13.185 22.771-22.771C167.773 94.82 170.57 84.35 170.57 73c0-11.351-2.797-21.822-8.39-31.408zm-43.75 70.433c0 .761-.246 1.398-.734 1.914s-1.086.773-1.793.773H100.26c-.706 0-1.331-.271-1.874-.814-.543-.543-.814-1.168-.814-1.873V96.546c0-.706.271-1.331.814-1.874.543-.543 1.168-.814 1.874-.814h15.643c.707 0 1.306.258 1.793.773.488.518.734 1.154.734 1.915v15.479zm-.164-28.026c-.055.543-.339 1.019-.854 1.426-.517.407-1.154.61-1.914.61h-15.073c-.761 0-1.413-.203-1.956-.61-.543-.407-.815-.883-.815-1.426l-1.385-50.595c0-.653.271-1.141.814-1.467.544-.434 1.196-.652 1.956-.652h17.926c.761 0 1.412.217 1.955.652.543.326.813.815.813 1.467l-1.467 50.595z"
            />
          </svg>
          <span
            class="ds-u-visibility--screen-reader"
          >
            Error: 
          </span>
          Hey! You can't do that!
        </p>
      </div>
    </div>
    <template />
  </ds-choice>
</DocumentFragment>
`;

exports[`Choice has a hint and requirementLabel 1`] = `
<DocumentFragment>
  <ds-choice
    hint="Hello world"
    id="static-id"
    label="George Washington"
    name="foo"
    requirement-label="Optional"
    type="checkbox"
    value="boo"
  >
    <div>
      <div
        class="ds-c-choice-wrapper"
      >
        <input
          aria-describedby="choice--8__error choice--8__hint"
          class="ds-c-choice"
          id="choice--8"
          name="foo"
          type="checkbox"
          value="boo"
        />
        <label
          class="ds-c-label"
          for="choice--8"
          id="choice--8__label"
        >
          George Washington
        </label>
        <p
          class="ds-c-hint"
          id="choice--8__hint"
        >
          Optional. Hello world
        </p>
        <p
          aria-atomic="true"
          aria-live="assertive"
          class="ds-c-inline-error"
          id="choice--8__error"
        />
      </div>
    </div>
    <template />
  </ds-choice>
</DocumentFragment>
`;

exports[`Choice is a checkbox 1`] = `
<DocumentFragment>
  <ds-choice
    id="static-id"
    label="George Washington"
    name="foo"
    type="checkbox"
    value="boo"
  >
    <div>
      <div
        class="ds-c-choice-wrapper"
      >
        <input
          aria-describedby="choice--2__error"
          class="ds-c-choice"
          id="choice--2"
          name="foo"
          type="checkbox"
          value="boo"
        />
        <label
          class="ds-c-label"
          for="choice--2"
          id="choice--2__label"
        >
          George Washington
        </label>
        <p
          aria-atomic="true"
          aria-live="assertive"
          class="ds-c-inline-error"
          id="choice--2__error"
        />
      </div>
    </div>
    <template />
  </ds-choice>
</DocumentFragment>
`;

exports[`Choice is a radio 1`] = `
<DocumentFragment>
  <ds-choice
    id="static-id"
    label="George Washington"
    name="foo"
    type="radio"
    value="boo"
  >
    <div>
      <div
        class="ds-c-choice-wrapper"
      >
        <input
          aria-describedby="choice--1__error"
          class="ds-c-choice"
          id="choice--1"
          name="foo"
          type="radio"
          value="boo"
        />
        <label
          class="ds-c-label"
          for="choice--1"
          id="choice--1__label"
        >
          George Washington
        </label>
        <p
          aria-atomic="true"
          aria-live="assertive"
          class="ds-c-inline-error"
          id="choice--1__error"
        />
      </div>
    </div>
    <template />
  </ds-choice>
</DocumentFragment>
`;

exports[`Choice nested content renders checked and unchecked children appropriately 1`] = `
<DocumentFragment>
  <ds-choice
    id="static-id"
    label="George Washington"
    name="foo"
    type="checkbox"
    value="boo"
  >
    <div
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
    >
      <div
        class="ds-c-choice-wrapper"
      >
        <input
          aria-describedby="choice--23__error"
          class="ds-c-choice"
          id="choice--23"
          name="foo"
          type="checkbox"
          value="boo"
        />
        <label
          class="ds-c-label"
          for="choice--23"
          id="choice--23__label"
        >
          George Washington
        </label>
        <p
          aria-atomic="true"
          aria-live="assertive"
          class="ds-c-inline-error"
          id="choice--23__error"
        />
      </div>
      <strong
        class="unchecked-child"
        data-testid="unchecked"
      >
        I am unchecked
      </strong>
    </div>
    <template />
  </ds-choice>
</DocumentFragment>
`;
